# AutoMGR

./: .env.example  .gitignore  README.md  dados.json  list_models.py  main.py  main_api.py  main_gemini.py  main_openrouter.py  prompt_template.txt  pyproject.toml  requirements.txt
inputs/: dados.json
scripts/: list_models.py  main_api.py  main_gemini.py  main_openrouter.py
src/automgr/: __init__.py  __main__.py  cli.py  paths.py  prompt.py
src/automgr/providers/: __init__.py  gemini.py  groq.py  openai_provider.py  openrouter.py
